--- a/css-design.html
+++ b/css-design.html
@@ -72,6 +72,24 @@
         background-color: rgb(255, 255, 255);
         border-radius: 7px;
       }
+      #img {
+        width: 450px;
+        height: 350px;
+        padding-left: 700px;
+        padding-top: 60px;
+      }
+      #img2 {
+        width: 450px;
+        height: 350px;
+        padding-left: 700px;
+        padding-top: 60px;
+      }
+      #img3 {
+        width: 450px;
+        height: 350px;
+        padding-left: 700px;
+        padding-top: 60px;
+      }
     </style>
   </head>
   <body>
@@ -91,5 +109,45 @@
         <button class="btn">E mail</button>
       </div>
     </header>
+    <script src="design.js" type="text/Javascript" class="c1"></script>
+    <div class="slideshow-container">
+      <div class="numbertext">1 / 3</div>
+      <div class="mySlides fade">
+        <img
+          src="office.jpg"
+          id="img"
+          alt="Javascript"
+          onmouseover="fadein()"
+          onmouseout="fadeout()"
+        />
+      </div>
+      <div class="numbertext">2 / 3</div>
+      <div class="mySlides fade">
+        <img
+          src="office2.jpg"
+          id="img2"
+          alt="Javascript"
+          onmouseover="fadein()"
+          onmouseout="fadeout()"
+        />
+      </div>
+      <div class="numbertext">3 / 3</div>
+      <div class="mySlides fade">
+        <img
+          src="office3.jpg"
+          id="img3"
+          alt="Javascript"
+          onmouseover="fadein()"
+          onmouseout="fadeout()"
+        />
+      </div>
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <div style="text-align: center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
   </body>
 </html>
